@@ -73,7 +73,8 @@ DSD_Cubes <- function(k=2, d=2, center, size, p, noise = 0, noise_range) {
 }
 
 get_points.DSD_Cubes <- function(x, n=1, 
-    outofpoints=c("stop", "warn", "ignore"), assignment = FALSE, ...) {
+  outofpoints=c("stop", "warn", "ignore"), 
+  cluster = FALSE, class = FALSE, ...) {
   
   clusterOrder <- sample(x=c(1:x$k), 
                          size=n, 
@@ -97,6 +98,8 @@ get_points.DSD_Cubes <- function(x, n=1,
   }
   
   data <- as.data.frame(data)
-  if(assignment) attr(data, "assignment") <- clusterOrder
+  if(cluster) attr(data, "cluster") <- clusterOrder
+  if(class) data <- cbind(data, class = clusterOrder)
+  
   data
 }
