@@ -94,7 +94,8 @@ DSD_Gaussians <- function(k=2, d=2, mu, sigma, p, separation=0.2,
 }
 
 get_points.DSD_Gaussians <- function(x, n=1, 
-    outofpoints=c("stop", "warn", "ignore"), assignment = FALSE, ...) {
+    outofpoints=c("stop", "warn", "ignore"), 
+    cluster = FALSE, class = FALSE, ...) {
   
   clusterOrder <- sample(x=c(1:x$k), 
     size=n, 
@@ -118,6 +119,8 @@ get_points.DSD_Gaussians <- function(x, n=1,
   }
   
   data <- as.data.frame(data)
-  if(assignment) attr(data, "assignment") <- clusterOrder
+  if(cluster) attr(data, "cluster") <- clusterOrder
+  if(class) data <- cbind(data, class = clusterOrder)
+
   data
 }
