@@ -16,7 +16,7 @@
 # with this program; if not, write to the Free Software Foundation, Inc.,
 # 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 
-### DSCs may overwrite get_assignemnt
+### DSCs may overwrite get_assignment
 get_assignment <- function(dsc, points, type=c("auto", "micro", "macro"), 
   method="auto", ...) 
   UseMethod("get_assignment")
