@@ -1419,7 +1419,7 @@ directory.
 <<>>= 
 file <- system.file("examples", "kddcup10000.data.gz", package="stream")
 dsd_file <- DSD_ReadCSV(gzfile(file),take=c(1, 5, 6, 8:11, 13:20, 23:41), 
-assignment=42, k=7)
+class=42, k=7)
 dsd_file
 @
 
